# Mobile-Turret-Robot

./: .gitignore  README.md  chassis_bottom.stl  chassis_front_back_cover.stl  tire.stl
3d_prints/: axel.stl  chassis_side_cover.stl  chassis_top_cover.stl  rim.stl
bot_setup/Stroam_System_Components/: CMakeLists.txt  README.md
bot_setup/Stroam_System_Components/include/Components/: LaserPointer.hpp
bot_setup/ros2_ws/src/laser_pointer_header/: LaserPointer.hpp
bot_setup/run_app/ros2_ws/src/stroam_camera/: package.xml  setup.py
bot_setup/run_app/ros2_ws/src/stroam_camera/stroam_camera/: camera_publisher.py
bot_setup/startup/ros2_ws/src/stroam_bringup/: CMakeLists.txt  package.xml
bot_setup/startup/ros2_ws/src/stroam_bringup/launch/: manual_control.launch.xml
bot_setup/startup/ros2_ws/src/stroam_camera/: setup.cfg
bot_setup/startup/ros2_ws/src/stroam_camera/config/: params.yaml
bot_setup/startup/ros2_ws/src/stroam_camera/stroam_camera/: .camera_publisher.py.swp  camera_client_view.py  camera_publisher.py
bot_setup/startup/ros2_ws/src/stroam_interface/: CMakeLists.txt  package.xml
bot_setup/startup/ros2_ws/src/stroam_interface/action/: TurretInstruct.action
bot_setup/startup/ros2_ws/src/stroam_interfaces/: CMakeLists.txt  package.xml
bot_setup/startup/ros2_ws/src/stroam_interfaces/action/: MotorsInstruct.action  TurretInstruct.action
bot_setup/startup/ros2_ws/src/stroam_manager/: package.xml  setup.cfg  setup.py
bot_setup/startup/ros2_ws/src/stroam_manager/stroam_manager/: README.md  lifecycleManagerNode.py  stroam_manager_node.py
bot_setup/startup/ros2_ws/src/stroam_motor_controller/: CMakeLists.txt  package.xml
bot_setup/startup/ros2_ws/src/stroam_motor_controller/src/: .motorControllerNode.cpp.swp  motorControllerNode.cpp
bot_setup/startup/ros2_ws/src/stroam_turret/: CMakeLists.txt  package.xml
bot_setup/startup/ros2_ws/src/stroam_turret/src/: turretNode.cpp
bot_setup/startup/scripts/: manual_control.bash
bot_setup/stroam_libs/camera/: README.md
bot_setup/stroam_libs/device/: CMakeLists.txt  README.md
bot_setup/stroam_libs/device/include/device/: device.hpp
bot_setup/stroam_libs/device/src/: CMakeLists.txt  device.cpp
bot_setup/stroam_libs/motor_controller/: README.md
bot_setup/stroam_libs/motor_driver/: CMakeLists.txt  README.md
bot_setup/stroam_libs/motor_driver/include/motor_driver/: motorDriver.hpp
bot_setup/stroam_libs/motor_driver/src/: CMakeLists.txt  motorDriver.cpp
bot_setup/stroam_libs/turret/: CMakeLists.txt  README.md
bot_setup/stroam_libs/turret/include/turret/: turret.hpp
bot_setup/stroam_libs/turret/src/: CMakeLists.txt  turret.cpp
bot_setup/stroam_libs/turret/src/digital_output/: CMakeLists.txt  digitalOutputDevice.cpp  digitalOutputDevice.hpp
bot_setup/stroam_libs/turret/src/laser_pointer/: CMakeLists.txt  laserPointer.cpp  laserPointer.hpp
bot_setup/stroam_libs/turret/src/servo/: CMakeLists.txt  servo.cpp  servo.hpp
bot_setup/stroam_libs/turret/src/shooting_motors/: CMakeLists.txt  shootingMotors.cpp  shootingMotors.hpp
bot_setup/stroam_system_components/: CMakeLists.txt  README.md  sources.cmake
bot_setup/stroam_system_components/include/components/: Camera.hpp  LaserPointer.hpp  Servo.hpp
bot_setup/stroam_system_components/src/components/: Camera.cpp  Servo.cpp  ShootingMotors.cpp
bot_setup/stroams_packages/turret/: CMakeLists.txt  README.md
bot_setup/stroams_packages/turret/include/turret/: CMakeLists.txt  turret.hpp
bot_setup/stroams_packages/turret/include/turret/laser_pointer/: CMakeLists.txt
bot_setup/stroams_packages/turret/include/turret/servo/: CMakeLists.txt
bot_setup/stroams_packages/turret/include/turret/shooting_motors/: CMakeLists.txt
bot_setup/stroams_packages/turret/src/: CMakeLists.txt  turret.cpp
bot_setup/stroams_packages/turret/src/laser_pointer/: CMakeLists.txt  laserPointer.cpp
bot_setup/stroams_packages/turret/src/servo/: CMakeLists.txt
bot_setup/stroams_packages/turret/src/shooting_motors/: CMakeLists.txt  shootingMotors.hpp
bot_setup/test_code/test_System_Components/: CMakeLists.txt  main.cpp
bot_setup/test_code/test_turret/: CMakeLists.txt  README.md  main.cpp
bot_setup/test_operations/simple_test_turret/: README.md  main.cpp
bot_setup/test_operations/test_motor_driver_lib/: CMakeLists.txt  README.md  main.cpp
bot_setup/test_operations/test_turret_lib/: CMakeLists.txt  README.md  main.cpp
remote_setup/: Dockerfile  README.md  cyclonedds.xml
remote_setup/.devcontainer/: devcontainer.json
remote_setup/camera/: camera_server_view.py
remote_setup/ros2_ws/src/remote_controller/: README.md  package.xml  setup.py
remote_setup/ros2_ws/src/remote_controller/remote_controller/: controllerNode.py
remote_setup/ros2_ws/src/stroam_camera/: camera_server_view.py  package.xml  setup.py
remote_setup/ros2_ws/src/stroam_camera/stroam_camera/: camera_server_view.py  camera_sub.py
remote_setup/ros2_ws/src/stroam_interface/: package.xml
remote_setup/ros2_ws/src/stroam_interfaces/: CMakeLists.txt  package.xml
remote_setup/ros2_ws/src/stroam_interfaces/msg/: XboxController.msg
remote_setup/scripts/: build.bash  run.bash
remote_setup/startup/: remote_manual_control.bash
